# constraint-handler

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  LICENSE  PROPAGATOR_PRIORITY_ISSUE.md  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/: copilot-instructions.md
.github/ci/: enable_python_smoke.lp
.github/workflows/: deploy.yml  doc.yml  pr-quick.yml  test.yml
docs/: SUMMARY.md  getting_started.md  index.md
docs/_hooks/: links_hook.py
docs/_scripts/: generate_python_documentation.py
docs/community/: CHANGES.md  DEPLOYMENT.md  DEVELOPMENT.md  help.md  index.md
docs/developer/: asp_glossary.md  compile_engine.md  fact-format.md  testing.md  type_checking.md
docs/examples/: knapsack.md
docs/fact-format/: Makefile  fact-format-main.tex  fact-format.tex
docs/reference/: base_types.md  collections.md  conditionals.md  constraints.md  core_syntax.md  engines.md  error_handling.md  execution.md  expressions.md  language_concepts.md  modeling_language.md  operations.md  optimization.md  preference.md  python_integration.md  values_and_variables.md
docs/user_guide/: basic_concepts.md  getting_started.md  installation.md
scratch/: performance.py
src/clingspector/: base.lp  checker.py  clingspector.py  diagnostic.py  diagnostics.py  main.py
src/constraint_handler/: PropagatorConstants.py  PropagatorVariables.py  __init__.py  arithmetic.py  evaluator.py  logic.py  main.py  multimap.py  myClorm.py  performance.py  post_processor.py  propagator.py  set.py  solver_environment.py  unsatCoreSupport.py
tests/: conftest.py  run_tests.py  test_api.py  test_encoding.py  test_multimap.py  test_myclorm.py  test_operator_validation.py  test_performance.py  test_python_domain.py  test_python_externals_interface.py  test_python_statement_analysis.py
(+1505 files in other folders)
